# friends-zome

./: 404.html  README.md  flake.nix  friends-store.html  hashmap.json  index.html  introduction.html  package.json  pnpm-lock.yaml  setup.html
assets/: app.AP_jKPDS.js  app.BNoDjZ20.js  app.BPjFvL9b.js  app.B_csoTM-.js  app.BpNGYsw7.js  app.Bxu8y8jY.js  app.C252Mpmt.js  app.CDdXoq0r.js  app.CfNjHgk-.js  app.CpunZoNL.js  app.Cy57Hl7c.js  app.D-IyH41R.js  app.D8AR-awf.js  app.DD2y78PW.js  app.Dji22Gsq.js  app.bC7gfP-Y.js  app.iqNFJxjj.js  app.xTs3NCqw.js  app.yw8e3F_3.js  elements_friend-requests.md.09mSZupq.js  elements_friend-requests.md.09mSZupq.lean.js  elements_friend-requests.md.0D8-5N_E.js  elements_friend-requests.md.0GqzaB_n.js  elements_friend-requests.md.3Jl7FVSH.js  elements_friend-requests.md.3Jl7FVSH.lean.js  elements_friend-requests.md.5m3vpXpe.js  elements_friend-requests.md.5m3vpXpe.lean.js  elements_friend-requests.md.A01PhGjb.js  elements_friend-requests.md.B4IX80uX.js  elements_friend-requests.md.B4IX80uX.lean.js  elements_friend-requests.md.BBLPOR62.js  elements_friend-requests.md.BBLPOR62.lean.js  elements_friend-requests.md.BEfo4NxT.js  elements_friend-requests.md.BEfo4NxT.lean.js  elements_friend-requests.md.BKROIMvI.js  elements_friend-requests.md.BKROIMvI.lean.js  elements_friend-requests.md.BLBWres-.js  (+431 more)
backend/: .rustc_info.json  (+1 more)
zomes/coordinator/friends/: Cargo.toml  zome.nix
zomes/coordinator/friends/src/: all_friends.rs  friend_request.rs  lib.rs  notifications.rs  private_event.rs  profile.rs  profiles_provider.rs  synchronize.rs
(+1878 files in other folders)
