[package]
name = "friends"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "friends"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

friends_integrity = { path = "../../integrity/friends" }

private_event_sourcing = { git = "https://github.com/darksoil-studio/private-event-sourcing-zome", branch = "main" }
