[package]
name = "friends"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "friends"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

friends_integrity = { path = "../../integrity/friends" }

private_event_sourcing = { git = "https://github.com/darksoil-studio/private-event-sourcing-zome", branch = "main-0.4" }

# Notifications handling
notifications_types = { git = "https://github.com/darksoil-studio/notifications-zome", branch = "main-0.4" }
hc_zome_trait_notifications = { git = "https://github.com/darksoil-studio/notifications-zome", branch = "main-0.4" }
hc_zome_traits = { git = "https://github.com/holochain-open-dev/zome-traits", branch = "main" }
xliff = { git = "https://github.com/kkostov/hb-rs-xliff", branch = "master" }
md-icons = "0.3"
